metadata-classic/objects/CustomException__c.object
<CustomObject>
    <fields>
        <fullName>BugRecordType__c</fullName>
        <label>Bug Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Jira Integration</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>WorkItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Custom Exception</label>
    <nameField>
        <label>Custom Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Exceptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>